you can add users to lair, entities.py now uses the lair to handle users
